[gd_scene load_steps=17 format=3 uid="uid://btmi5gjs2alpd"]

[ext_resource type="Texture2D" uid="uid://b7rfypudxffo7" path="res://assets/guiTextures/Logo.png" id="1"]
[ext_resource type="Texture2D" uid="uid://bt4tarego7tv4" path="res://assets/guiTextures/levelSelectorButton.png" id="2"]
[ext_resource type="Texture2D" uid="uid://nl3t02xj34r0" path="res://assets/guiTextures/iconSelectorButton.png" id="3"]
[ext_resource type="Texture2D" uid="uid://twpw8xcb1ccf" path="res://assets/guiTextures/levelCreateButton.png" id="4"]
[ext_resource type="PackedScene" path="res://src/actors/Background.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://bek1af8w6bfm3" path="res://assets/levelTextures/ground/floorLine_001.png" id="5_hk06f"]
[ext_resource type="PackedScene" uid="uid://cdaengsb8lyil" path="res://src/actors/Ground.tscn" id="6"]
[ext_resource type="Script" path="res://src/scenes/Line.gd" id="6_op6mj"]
[ext_resource type="Script" path="res://src/scenes/uiElements/clickable_button.gd" id="7"]
[ext_resource type="Script" path="res://src/scenes/StartScreen.gd" id="8"]
[ext_resource type="PackedScene" uid="uid://cqslxljwyr3r6" path="res://src/scenes/uiElements/FadeScreen.tscn" id="9"]
[ext_resource type="Theme" uid="uid://egspkbwxefg2" path="res://src/scenes/uiElements/GuiElementsTheme.tres" id="10"]
[ext_resource type="Texture2D" uid="uid://d2ww8cbkcr2in" path="res://assets/guiTextures/GJ_closeBtn_001.png" id="11"]
[ext_resource type="FontFile" uid="uid://3d5l6qp0iyr" path="res://assets/fonts/PUSAB___.otf" id="12"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_u25f8"]
blend_mode = 1

[sub_resource type="FontFile" id="13"]
fallbacks = Array[Font]([ExtResource("12")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/75/0/ascent = 0.0
cache/0/75/0/descent = 0.0
cache/0/75/0/underline_position = 0.0
cache/0/75/0/underline_thickness = 0.0
cache/0/75/0/scale = 1.0
cache/0/75/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10")
script = ExtResource("8")

[node name="Background" parent="." instance=ExtResource("5")]
position = Vector2(303, 1052)
script = null

[node name="Ground_Bottom" type="Node2D" parent="."]
position = Vector2(960, 900)
scale = Vector2(1.5, 1.5)
metadata/_edit_group_ = true

[node name="Ground_Bottom_OBJ" parent="Ground_Bottom" instance=ExtResource("6")]

[node name="Line_Bottom" type="Sprite2D" parent="Ground_Bottom"]
material = SubResource("CanvasItemMaterial_u25f8")
position = Vector2(-2.03451e-05, 1)
scale = Vector2(0.333333, 0.333333)
texture = ExtResource("5_hk06f")
script = ExtResource("6_op6mj")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -823.5
offset_top = -457.5
offset_right = 823.5
offset_bottom = 457.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="Menu"]
custom_minimum_size = Vector2(0, 425)
layout_mode = 2
texture = ExtResource("1")
stretch_mode = 4

[node name="Buttons" type="HBoxContainer" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
alignment = 1

[node name="IconSelector" type="Button" parent="Menu/Buttons"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("3")
flat = true
script = ExtResource("7")

[node name="LevelSelector" type="Button" parent="Menu/Buttons"]
layout_mode = 2
icon = ExtResource("2")
flat = true
icon_alignment = 1
script = ExtResource("7")

[node name="LevelEditor" type="Button" parent="Menu/Buttons"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("4")
flat = true
script = ExtResource("7")

[node name="CloseGame" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 107.0
offset_bottom = 107.0
pivot_offset = Vector2(37, 37)
icon = ExtResource("11")
flat = true
expand_icon = true
script = ExtResource("7")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 1020.0
offset_right = 554.0
offset_bottom = 1052.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("13")
theme_override_font_sizes/font_size = 50
text = "Made by EnderPrism"

[node name="FadeScreen" parent="." instance=ExtResource("9")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1500.0
offset_top = -540.0
offset_right = 1500.0
offset_bottom = 540.0
grow_horizontal = 1
grow_vertical = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="button_down" from="Menu/Buttons/IconSelector" to="." method="_on_Icon_Selector_button_down"]
[connection signal="button_up" from="Menu/Buttons/IconSelector" to="." method="_on_Icon_Selector_button_up"]
[connection signal="button_down" from="Menu/Buttons/LevelSelector" to="." method="_on_LevelSelector_button_down"]
[connection signal="button_up" from="Menu/Buttons/LevelSelector" to="." method="_on_LevelSelector_button_up"]
[connection signal="pressed" from="Menu/Buttons/LevelEditor" to="." method="_on_level_editor_pressed"]
[connection signal="button_up" from="CloseGame" to="." method="_on_CloseGame_button_up"]
[connection signal="fade_finished" from="FadeScreen" to="." method="_on_FadeScreen_fade_finished"]
